# lucasbardella.com

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.json  CLAUDE.md  Cargo.toml  Makefile  README.md  build.js  collection.json  docker-compose.yml  eslint.config.mjs  experience.md  observablehq.config.js  onyx.md  package-lock.json  package.json  pyproject.toml  readme.md  taplo.toml  tsconfig.json  webpack.config.js  webpack.config.ts
.claude/memory/: MEMORY.md  feedback_no_dashes.md
.dev/: lint-py  node-run  py-lint  ubuntu-install
.github/: copilot-instructions.md
.github/instructions/: cfd-instructions.md  content-instructions.md  lab-instructions.md  python-instructions.md  typescript-instructions.md
.github/workflows/: deploy.yml
.legacy/app/: styles.ts
.legacy/content/: .eslintrc.js  collection.json
app/: App.tsx  Index.tsx  MUISwitch.tsx  Main.tsx  index.tsx  main.tsx  theme.ts
app/Views/: CmsList.tsx  CmsPageEntry.tsx  Footer.tsx  Notebook.tsx
app/notebook/: github.ts  tradingview.ts
app/views/: CmsPageEntry.tsx  Container.tsx  Footer.tsx  Javascript.tsx  Notebook.tsx  Parallax.tsx
benches/: decimal.rs  string.rs  timestamp.rs
blog/: china_wine_regions.md  collection.json  github-firewall.md  github.md  htmldata.md  katex.md  metablock-website.md  roller-coaster-2009.md  sinking_pound.md
cfd/: backward_step.py  cavity.py  cli.py  models.py
cfd/dev/: Dockerfile  cfd-test.dockerfile  cfd.dockerfile
cfd/tests/: test_cfd_model.py
components/: Copyright.tsx  List.tsx  Main.tsx
content/: 404.md  CNAME  analytics.md  blog.md.ts  coding.md.ts  collection.json  contact.md  credits.md  crypto-companies.md  crypto-options.md  cutting-through-the-noise.md  cv.md  index.md  lab.md.ts  links.md  market.md  now.md  quantmind.md  style.css
content/blog/: ai-world.md  bettersweet.md  china_wine_regions.md  collection.json  crypto-companies.md  crypto-options.md  data-viz.json  digital-nomad.md  emission-trading-system.md  energy.md  github-firewall.md  github.md  hosting-your-sphinx-docs-in-github.md  htmldata.md  interactive-cfd.md  job-hunting.md  katex.md  lead-lag.md  lid-driven-cavity.md  metablock-website.md  ml.md  my-wsl2-setup.md  roller-coaster-2009.md  sinking-pound.md  sinking_pound.md  skills-of-a-data-miner.md  state-diagrams.md  super-mario.md  the-most-used-ais.md  uk-power-market.md  wls2.md  wsl2.md
content/coding/: cutting-through-the-noise.md  inter-core-communication.md  introduction-to-rust.md  lead-lag.md  rust-for-hft.md
content/components/: OptionTable.tsx  agnesi.tsx  cylinder.tsx  (+26 more)
context/: stores.tsx  styles.ts  theme.ts
cv/: employment.tex  header.tex  skills.tex
data/: __main__.py
extra/: readme.md
lab/: agnesi.md  collection.json  cylinder.md  particles.md  pi.md  planarity.md  rotating_world.md  sparkling.md
lspy/: __main__.py  boe.py  df.py  hide.py  observable.py  settings.py  uk_power.py
lsts/: config.ts  content.ts  footer.ts  head.ts
main/: Footer.tsx  cms.tsx  index.ts  index.tsx  routes.tsx  styles.ts
pages/: Cv.tsx  Home.tsx
phd/: thesis.lof  thesis.toc
react/: Background.tsx  Cms.tsx  index.ts  useFetch.ts
src/: content.js  content.ts  footer.js  footer.ts  lib.rs  queue.rs  seqlock.rs  timestamp.rs
views/: Cms.tsx  CmsList.tsx  CmsPageEntry.tsx  Container.tsx  Footer.tsx  Javascript.tsx  Main.tsx  Markdown.tsx  Notebook.tsx  Parallax.tsx  styles.ts  width.ts
(+177 files in other folders)
