[package]
name = "lsrs"
version = "0.1.0"
authors = ["Luca Sbardella <luca@quantmind.com>"]
edition = "2024"
repository = "https://github.com/lsbardel/lucasbardella.com"


[dependencies]
chrono = "0.4.41"
disruptor = "3.4.0"
parking_lot = "0.12.4"
quanta = "0.12.5"
ringbuf = "0.4.8"
rust_decimal = { version = "1.37.2", features = ["maths"] }
smol_str = "0.3.2"

[dev-dependencies]
average = "0.16.0"
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "timestamp"
harness = false

[[bench]]
name = "string"
harness = false

[[bench]]
name = "decimal"
harness = false
