[project]
name = "lucasbardella-com"
version = "0.1.0"
description = "Python tooling for lucasbardella.com"
authors = [ { name = "Luca Sbardella", email = "luca@quantmind.com" } ]
readme = "readme.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aio-fluid[cli,http]>=1.8.2",
    "boto3>=1.38.3",
    "ipython[cfd]>=9.11.0",
    "pandas>=3.0.1",
    "pyhumps>=3.8.0",
    "python-dotenv>=1.1.1",
    "qrcode[pil]>=8.2",
    "quantflow[cli,data]>=0.4.4",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.0",
    "isort>=8.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "types-boto3-lite[s3]>=1.38.3",
    "types-qrcode>=8.0.0.20241004",
]
cfd = [
    "foamlib>=1.5.7",
]

[tool.setuptools]
packages = [ "lspy" ]

[tool.isort]
profile = "black"
skip = [ "lspy/__main__.py" ]

[tool.ruff]
lint.select = [ "E", "F" ]
line-length = 88

[[tool.mypy.overrides]]
module = [ "pandas.*" ]
ignore_missing_imports = true
